Revision history for File::DataClass

         - Added cache_class schema attribute. Set to 'none' to defeat cache
         - Changed _utf8 attribute to is_utf8 for sense and clarity
         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Upgraded Module::Build
         - Tweaked cache construction and tightend cache typing

0.3.239  2011-02-22
         - Suppressed Konig CPAN testing again

0.3.238  2011-01-26
         - Removed extra unwanted attributes from XML::Bare read filter
         - Updated exception handling class

0.2.234  2010-10-06
         - Fixed bare io keywords in tests after Moose 1.15
         - Added unlink_on_exit to cache default attributes

0.1.228  2010-09-28
         - Started this log