@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Added simple schema attribute to set cache and lock classes
+         - to none
          - Added cache_class schema attribute. Set to 'none' to defeat cache
          - Changed _utf8 attribute to is_utf8 for sense and clarity
          - Moved boilerplate M::B subclass code to inc/Bob.pm
